--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -26,6 +26,10 @@ nav {
   padding: 10px;
 }
 
+.link:hover {
+  color: burlywood;
+}
+
 .profile-icon {
   background-color: #fff;
   font-weight: bolder;
@@ -36,4 +40,5 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
