--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,16 @@
-#app.css {
+/* #app.css {
   min-height: calc(100vh - 100px);
   position: relative;
   width: 100vw;
   padding-bottom: 100px;
-}
+} */
 
 /* #scrollable {
   padding-top: 60px;
 } */
 
 .section {
-  width: 100vw;
   background-color: burlywood;
-  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
