--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,9 +1,11 @@
 footer {
-  position: absolute;
-  bottom: 0;
   background-color: #6f4e37;
-  width: 100vw;
-  height: 60px;
+  flex-shrink: 0;
+  padding: 20px;
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .content {
